# atcore

./: .appveyor.yml  .arcconfig  .flatpak-manifest.json  .flatpak-manifest.json.license  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  KF5AtCoreConfig.cmake.in  Messages.sh  README.md  brprint3d.xmi
LICENSES/: LicenseRef-KDE-Accepted-LGPL.txt
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  atcore.png.license  build.md  contrib.md  mainpage.md
poqm/ar/: atcore_qt.po
poqm/ast/: atcore_qt.po
poqm/ca/: atcore_qt.po
poqm/ca@valencia/: atcore_qt.po
poqm/cs/: atcore_qt.po
poqm/da/: atcore_qt.po
poqm/de/: atcore_qt.po
poqm/el/: atcore_qt.po
poqm/en_GB/: atcore_qt.po
poqm/eo/: atcore_qt.po
poqm/es/: atcore_qt.po
poqm/et/: atcore_qt.po
poqm/eu/: atcore_qt.po
poqm/fi/: atcore_qt.po
poqm/fr/: atcore_qt.po
poqm/ga/: atcore_qt.po
poqm/gl/: atcore_qt.po
poqm/he/: atcore_qt.po
poqm/ia/: atcore_qt.po
poqm/it/: atcore_qt.po
poqm/ja/: atcore_qt.po
poqm/ka/: atcore_qt.po
poqm/ko/: atcore_qt.po
poqm/lt/: atcore_qt.po
poqm/nl/: atcore_qt.po
poqm/nn/: atcore_qt.po
poqm/pl/: atcore_qt.po
poqm/pt/: atcore_qt.po
poqm/pt_BR/: atcore_qt.po
poqm/ru/: atcore_qt.po
poqm/sk/: atcore_qt.po
poqm/sl/: atcore_qt.po
poqm/sv/: atcore_qt.po
poqm/tr/: atcore_qt.po
poqm/ug/: atcore_qt.po
poqm/uk/: atcore_qt.po
poqm/x-test/: atcore_qt.po
poqm/zh_CN/: atcore_qt.po
poqm/zh_TW/: atcore_qt.po
scripts/: README.md  fakeprinter.py  pre-commit.style  socat.sh  style.sh
src/: CMakeLists.txt  atcore.cpp  atcore.h  atcore_default_folders.h.in  gcodecommands.cpp  gcodecommands.h  ifirmware.cpp  ifirmware.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  printthread.cpp  printthread.h  protocollayer.cpp  protocollayer.h  seriallayer.cpp  seriallayer.h  temperature.cpp  temperature.h
src/core/: AtCoreConfig.cmake.in  CMakeLists.txt  atcore.cpp  atcore.h  atcore_default_folders.h.in  beddeform.cpp  beddeform.h  gcodecommands.cpp  gcodecommands.h  ifirmware.cpp  ifirmware.h  machineinfo.cpp  machineinfo.h  printthread.cpp  printthread.h  seriallayer.cpp  seriallayer.h  temperature.cpp  temperature.h
src/imports/: CMakeLists.txt  atcoreextensionplugin.cpp  atcoreextensionplugin.h  qmldir
src/plugins/: CMakeLists.txt  aprinterplugin.cpp  aprinterplugin.h  grblplugin.cpp  grblplugin.h  marlinplugin.cpp  marlinplugin.h  redeemplugin.cpp  redeemplugin.h  repetierplugin.cpp  repetierplugin.h  smoothieplugin.cpp  smoothieplugin.h  sprinterplugin.cpp  sprinterplugin.h  teacupplugin.cpp  teacupplugin.h
src/widgets/: AtCoreWidgetsConfig.cmake.in  CMakeLists.txt  about.cpp  about.h  axiscontrol.cpp  axiscontrol.h  commandwidget.cpp  commandwidget.h  logwidget.cpp  logwidget.h  movementwidget.cpp  movementwidget.h  plotwidget.cpp  plotwidget.h  printwidget.cpp  printwidget.h  profilemanager.cpp  profilemanager.h  sdwidget.cpp  sdwidget.h  statuswidget.cpp  statuswidget.h  temperaturewidget.cpp  temperaturewidget.h
test/: sample.gcode
testclient/: AtCoreTest.desktop  AtCoreTest.icns  AtCoreTest.menu  CMakeLists.txt  atcore-gui.icns.license  atcoreui.rc  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.kde.atcore.appdata.xml  org.kde.atcore.desktop
testclient/widgets/: CMakeLists.txt  about.cpp  about.h  axiscontrol.cpp  axiscontrol.h  commandwidget.cpp  commandwidget.h  logwidget.cpp  logwidget.h  movementwidget.cpp  movementwidget.h  plotwidget.cpp  plotwidget.h  printerhostpositionvisualcontroller.cpp  printerhostpositionvisualcontroller.h  printwidget.cpp  printwidget.h  sdwidget.cpp  sdwidget.h  statuswidget.h  temperaturewidget.cpp  temperaturewidget.h
unittests/: CMakeLists.txt  atcoretests.cpp  atcoretests.h  beddeformtests.cpp  beddeformtests.h  gcodetests.cpp  gcodetests.h  temperaturetests.cpp  temperaturetests.h
